--- a/_posts/it/2021-04-06-why.markdown
+++ b/_posts/it/2021-04-06-why.markdown
@@ -5,5 +5,28 @@ date:   2021-04-06 00:00:00 -0500
 lang: it
 categories: it
 ---
+Prima di iniziare, se leggi a dopo della prima frase, starò troppo eccitato che una persona ha preso il tempo per leggere question. Ti apprezzo e grazie mille! Anche l'altra cosa che non ho detto nella versione inglese è mi dispiace se scrivo mal'italiano. Solo ero parlando quel bel lingua per due anni, e ho molto per imparare. Se ho fatto un errore o qualcosa non fa il senso, per favore mi invia un messaggio sul Instagram!
 
-La prima domanda per chiedi è perchè. Perchè sto facendo quello sito, e quello pagina di meme. 
+La prima domanda per ripostare sulla quella pagina è perchè? Perchè lo era creata? Qual'è il motivo per quella pagina meme e quello sito web? Perchè lo sto facendo?
+
+Ci sono molti motivi, personale e altro perchè ho voluto creare quel sito web. Il principale motivo è per condividere la fede Cattolica che tu sia Cattolico o meno, e creare un posto dove qualcuno può ottenere una prospettiva genuina da una persona chi segue La Chiesa Cattolica e chi si iscrivi agli insegnamenti morali cattolici.
+
+Alla fine della messa cattolica, il sacerdote ci dice, "La messa è finita, andate in pace". La significa della frase "andate in pace" è per dire il mondo le buone notizie. Quello è parzialmente il mio metodo per farlo. 
+
+Non è un segreto che Il Cattolicesimo, ma anche, [Il Cristianesmio è in declino ogni giorno](https://www.pewforum.org/2019/10/17/in-u-s-decline-of-christianity-continues-at-rapid-pace/) (ai miei lettori italiani, solo ho lo studio degli Stati Uniti). Questo cambiamento veloce nella partecipazione al Cristianesimo è rifelssiva dell'influenza sociale che si sta cambiando il mondo occidentale. Se stai leggendo questo come una Cattolica chi sta preoccupato con quello declino, o come un ateo che sta saltando per la goia, ti chiedo se quello cambiamento veloce è una cosa bene. Per la passata due mille anni, il Cristianesimo (che significa il seguente di Cristo) ha cresciuto dagli dodieci apostoli originale, agli primi Cristiani chi hanno nascosto nelle catacombe, agli Cristiani oggi, chi fanno una terza del'mondo. Il Cristianesimo ci hanno guidato attraverso alcuni dei più grande avanzamenti nel tutto il tempo. Quello non è per dire che ogni avanzamenti hanno venuto degli Cristiani, ma è solo per chiedere se l'umanità ha la capacità di gestire quel cambiamento. Le cose buone per l'lumanità e la società che i genti che hanno venuto prima di noi hanno dato per scontato sono lasciando con il declino di Cristianesimo. 
+
+[Gli Americani oggi sono più depresso che mai](https://www.cbsnews.com/news/americans-more-depressed-now-than-decades-ago/), e non sto dicedo che il declino di Cristianesimo è la sola ragione per questo. Ma questo fenomeno mi fa chiedere, "Cosa stiamo facendo diverso adesso che non hanno fatto prima?".
+
+Suppongo che a dopo di leggere questi dui paragrafi, forse pensi che il motivo per questo sito e per questa pagina meme e per convertire i genti al Cattolicesimo, nel metodò della inquisizione Spagnola. Certamente, non voglio farlo. Secondo mio, il dipartimento di marketing del Cattolicesimo no sta facendo un buon lavoro, e deve fare di meglio. Penso che i genti vogliono una fede, perchè molte persone che stanno lottando hanno trovato il conforto nella nostra fede. Anche, credo che se puoi capire i motivi dietro alle cose nella nostra fede, la tentazione per continuare imparare nella nostra fede, al minimo, è irresistibile.
+
+L'altri motivi (se vuoi sapere), sono per approfondire la mia fede, e per practicare il mio Italiano. (Spero che ho fatto un buon lavoro con questo... Voglio scrivere ogni articolo nel Italiano e Inglese).
+
+Il mio piano è per tieni questi post lunghi sul sito, e mettere la scrittura corta per il Instagram. 
+
+Anche, forse, un giorno, possiamo avere il nome sul instagram "Catholic". Adesso, la lettera "l" nella parola "Catholic" è una capitale "i". Il instagram starà un posto per spargere idee veloce, nella lingua che ha venuto dalla 21° secolo - le meme.
+
+Se trovi qualche meme Cattoliche, o se vuoi scrivere un post sul blog, mi invia un messaggio sul Instagram!.
+
+Grazie mille per leggere alla finita... Non ho pensato che chiunque lo farebbe qui. 
+
+Il Dio è Buono, e Il Gesù e Il Re
