--- a/_posts/it/2021-04-06-why.markdown
+++ b/_posts/it/2021-04-06-why.markdown
@@ -29,4 +29,4 @@ Se trovi qualche meme Cattoliche, o se vuoi scrivere un post sul blog, mi invia 
 
 Grazie mille per leggere alla finita... Non ho pensato che chiunque lo farebbe qui. 
 
-Il Dio è Buono, e Il Gesù e Il Re
+Il Dio è Buono, e Il Gesù è Il Re
